--- a/home/static/home/css/styles.css
+++ b/home/static/home/css/styles.css
@@ -74,10 +74,6 @@ footer {
   justify-content: center !important;
 }
 
-.home-desc-div {
-  width: 60%;
-}
-
 .home-header {
   margin-top: -60px;
   margin-right: -20px;
